# quickstart-resources

rag_flow/: .augment-guidelines  .augmentignore  .codeiumignore  .gitignore  .mcp.json  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  test_improved_chunking_engine.py  test_improved_quality_assessment.py  test_quality_simple.py
rag_flow/.augment/rules/: fastapi-rule.md  python-code-rule.md
rag_flow/.claude/agents/: code-quality-checker,md  doc-updater.md  test-debugger.md
rag_flow/.claude/commands/: commit.md  spec.md
rag_flow/.cursor/: mcp.json
rag_flow/.cursor/docs/: API_DOC.md  ARCHITECTURE.md  CHANGELOG.md  CHUNK_QUALITY_ASSESSMENT_IMPROVEMENT.md  DEPENDENCY_ANALYSIS.md  DEPENDENCY_VERSION_ANALYSIS.md  DEPLOYMENT.md  FEATURE_PROGRESS.md  README.md
rag_flow/.cursor/rules/: code-fastapi-rule.mdc  code-mcp-expert.mdc  code-normal.mdc  code-python-rule.mdc  development-plan-generator.mdc  doc-api-doc-rule.mdc  doc-auto-update-rule.mdc  doc-detail-expert.mdc  doc-feature-progress-rule.mdc  doc-needed-expert.mdc  (+10 more)
rag_flow/config/: config.yaml
rag_flow/scripts/: check_dependencies.py  install_embedding.sh  run.py
rag_flow/src/: __init__.py  main.py
rag_flow/test_docs/: 可行性研究报告.md  项目需求.md
rag_flow/test_output/: benchmark_results.json  error_analysis.json  preset_comparison.json  simplified_chunking_test_disabled.json  simplified_chunking_test_standard.json  simplified_json_output_guide.md  test_report.md  test_results.json  test_results_summary.md  test_summary.csv
rag_flow/tests/: __init__.py  main.py  test.md  translate_vector.py
(+157 files in other folders)
