[project]
name = "rag-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.12.0,<2.0.0",
    "black>=23.0.0,<25.0.0",
    "docling>=2.0.0,<3.0.0",
    "fastapi>=0.104.0,<1.0.0",
    "flake8>=6.0.0,<8.0.0",
    "loguru>=0.7.0,<1.0.0",
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.4.0,<10.0.0",
    "mypy>=1.6.0,<2.0.0",
    "numpy>=1.24.0,<3.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "pandas>=2.1.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "pillow>=10.0.0,<12.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pymilvus>=2.3.0,<3.0.0",
    "pymupdf>=1.23.0,<2.0.0",
    "pytesseract>=0.3.10,<1.0.0",
    "pytest>=7.4.0,<9.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "python-pptx>=1.0.2,<2.0.0",
    "sentence-transformers>=2.2.0,<6.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "transformers>=4.35.0,<5.0.0",
    "uvicorn>=0.24.0,<1.0.0",
    "torch==2.2.2",
    "openai>=1.99.3",
    "zhipuai>=2.1.5.20250801",
    "json-repair>=0.48.0",
]

[[index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
